// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataTable Snapshot Tests matches snapshot with custom empty message 1`] = `
<div>
  <div
    class="w-full bg-white rounded-lg shadow-sm"
  >
    <div
      class="p-6 border-b border-gray-200"
    >
      <div
        class="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <label
            class="text-sm text-gray-600"
            for="perPage"
          >
            Show
          </label>
          <select
            class="border border-gray-300 rounded-lg pl-3 pr-8 py-2 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
            id="perPage"
          >
            <option
              value="10"
            >
              10
            </option>
            <option
              value="25"
            >
              25
            </option>
            <option
              value="50"
            >
              50
            </option>
            <option
              value="100"
            >
              100
            </option>
          </select>
          <span
            class="text-sm text-gray-600"
          >
            entries
          </span>
        </div>
      </div>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="min-w-full divide-y divide-gray-200"
      >
        <thead
          class="bg-gray-50"
        >
          <tr>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Product Name
              </div>
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Price
              </div>
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Stock
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="bg-white divide-y divide-gray-200"
        >
          <tr>
            <td
              class="px-6 py-10 text-center text-gray-500"
              colspan="3"
            >
              <div
                class="flex flex-col items-center"
              >
                <svg
                  class="h-12 w-12 text-gray-400 mb-3"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <p
                  class="text-sm font-medium"
                >
                  No data found
                </p>
                <p
                  class="text-xs text-gray-400 mt-1"
                >
                  Try adjusting your search criteria
                </p>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="px-6 py-4 border-t border-gray-200 flex flex-col sm:flex-row justify-between items-center gap-4"
    >
      <p
        class="text-sm text-gray-600"
      >
        Showing 
        <span
          class="font-medium"
        >
          1
        </span>
         to
         
        <span
          class="font-medium"
        >
          0
        </span>
         of
         
        <span
          class="font-medium"
        >
          0
        </span>
         results
      </p>
    </div>
  </div>
</div>
`;

exports[`DataTable Snapshot Tests matches snapshot with data 1`] = `
<div>
  <div
    class="w-full bg-white rounded-lg shadow-sm"
  >
    <div
      class="p-6 border-b border-gray-200"
    >
      <div
        class="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4"
      >
        <div
          class="relative flex-1 max-w-md"
        >
          <input
            class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
            placeholder="Search..."
            type="text"
            value=""
          />
          <svg
            class="absolute left-3 top-2.5 h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <label
            class="text-sm text-gray-600"
            for="perPage"
          >
            Show
          </label>
          <select
            class="border border-gray-300 rounded-lg pl-3 pr-8 py-2 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
            id="perPage"
          >
            <option
              value="10"
            >
              10
            </option>
            <option
              value="25"
            >
              25
            </option>
            <option
              value="50"
            >
              50
            </option>
            <option
              value="100"
            >
              100
            </option>
          </select>
          <span
            class="text-sm text-gray-600"
          >
            entries
          </span>
        </div>
      </div>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="min-w-full divide-y divide-gray-200"
      >
        <thead
          class="bg-gray-50"
        >
          <tr>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Product Name
              </div>
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Price
              </div>
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Stock
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="bg-white divide-y divide-gray-200"
        >
          <tr
            class="hover:bg-gray-50 transition-colors"
          >
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              Product 1
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              $19.99
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              50
            </td>
          </tr>
          <tr
            class="hover:bg-gray-50 transition-colors"
          >
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              Product 2
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              $29.99
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              30
            </td>
          </tr>
          <tr
            class="hover:bg-gray-50 transition-colors"
          >
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              Product 3
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              $39.99
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              20
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="px-6 py-4 border-t border-gray-200 flex flex-col sm:flex-row justify-between items-center gap-4"
    >
      <p
        class="text-sm text-gray-600"
      >
        Showing 
        <span
          class="font-medium"
        >
          1
        </span>
         to
         
        <span
          class="font-medium"
        >
          3
        </span>
         of
         
        <span
          class="font-medium"
        >
          3
        </span>
         results
      </p>
    </div>
  </div>
</div>
`;

exports[`DataTable Snapshot Tests matches snapshot with empty data 1`] = `
<div>
  <div
    class="w-full bg-white rounded-lg shadow-sm"
  >
    <div
      class="p-6 border-b border-gray-200"
    >
      <div
        class="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4"
      >
        <div
          class="relative flex-1 max-w-md"
        >
          <input
            class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
            placeholder="Search..."
            type="text"
            value=""
          />
          <svg
            class="absolute left-3 top-2.5 h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <label
            class="text-sm text-gray-600"
            for="perPage"
          >
            Show
          </label>
          <select
            class="border border-gray-300 rounded-lg pl-3 pr-8 py-2 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
            id="perPage"
          >
            <option
              value="10"
            >
              10
            </option>
            <option
              value="25"
            >
              25
            </option>
            <option
              value="50"
            >
              50
            </option>
            <option
              value="100"
            >
              100
            </option>
          </select>
          <span
            class="text-sm text-gray-600"
          >
            entries
          </span>
        </div>
      </div>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="min-w-full divide-y divide-gray-200"
      >
        <thead
          class="bg-gray-50"
        >
          <tr>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Product Name
              </div>
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Price
              </div>
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Stock
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="bg-white divide-y divide-gray-200"
        >
          <tr>
            <td
              class="px-6 py-10 text-center text-gray-500"
              colspan="3"
            >
              <div
                class="flex flex-col items-center"
              >
                <svg
                  class="h-12 w-12 text-gray-400 mb-3"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
                <p
                  class="text-sm font-medium"
                >
                  No data found
                </p>
                <p
                  class="text-xs text-gray-400 mt-1"
                >
                  Try adjusting your search criteria
                </p>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="px-6 py-4 border-t border-gray-200 flex flex-col sm:flex-row justify-between items-center gap-4"
    >
      <p
        class="text-sm text-gray-600"
      >
        Showing 
        <span
          class="font-medium"
        >
          1
        </span>
         to
         
        <span
          class="font-medium"
        >
          0
        </span>
         of
         
        <span
          class="font-medium"
        >
          0
        </span>
         results
      </p>
    </div>
  </div>
</div>
`;

exports[`DataTable Snapshot Tests matches snapshot with pagination 1`] = `
<div>
  <div
    class="w-full bg-white rounded-lg shadow-sm"
  >
    <div
      class="p-6 border-b border-gray-200"
    >
      <div
        class="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4"
      >
        <div
          class="relative flex-1 max-w-md"
        >
          <input
            class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
            placeholder="Search..."
            type="text"
            value=""
          />
          <svg
            class="absolute left-3 top-2.5 h-5 w-5 text-gray-400"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <label
            class="text-sm text-gray-600"
            for="perPage"
          >
            Show
          </label>
          <select
            class="border border-gray-300 rounded-lg pl-3 pr-8 py-2 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
            id="perPage"
          >
            <option
              value="10"
            >
              10
            </option>
            <option
              value="25"
            >
              25
            </option>
            <option
              value="50"
            >
              50
            </option>
            <option
              value="100"
            >
              100
            </option>
          </select>
          <span
            class="text-sm text-gray-600"
          >
            entries
          </span>
        </div>
      </div>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="min-w-full divide-y divide-gray-200"
      >
        <thead
          class="bg-gray-50"
        >
          <tr>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Product Name
              </div>
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Price
              </div>
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Stock
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="bg-white divide-y divide-gray-200"
        >
          <tr
            class="hover:bg-gray-50 transition-colors"
          >
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              Product 1
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              $19.99
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              50
            </td>
          </tr>
          <tr
            class="hover:bg-gray-50 transition-colors"
          >
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              Product 2
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              $29.99
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              30
            </td>
          </tr>
          <tr
            class="hover:bg-gray-50 transition-colors"
          >
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              Product 3
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              $39.99
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              20
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="px-6 py-4 border-t border-gray-200 flex flex-col sm:flex-row justify-between items-center gap-4"
    >
      <p
        class="text-sm text-gray-600"
      >
        Showing 
        <span
          class="font-medium"
        >
          1
        </span>
         to
         
        <span
          class="font-medium"
        >
          3
        </span>
         of
         
        <span
          class="font-medium"
        >
          3
        </span>
         results
      </p>
    </div>
  </div>
</div>
`;

exports[`DataTable Snapshot Tests matches snapshot without search 1`] = `
<div>
  <div
    class="w-full bg-white rounded-lg shadow-sm"
  >
    <div
      class="p-6 border-b border-gray-200"
    >
      <div
        class="flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4"
      >
        <div
          class="flex items-center gap-2"
        >
          <label
            class="text-sm text-gray-600"
            for="perPage"
          >
            Show
          </label>
          <select
            class="border border-gray-300 rounded-lg pl-3 pr-8 py-2 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
            id="perPage"
          >
            <option
              value="10"
            >
              10
            </option>
            <option
              value="25"
            >
              25
            </option>
            <option
              value="50"
            >
              50
            </option>
            <option
              value="100"
            >
              100
            </option>
          </select>
          <span
            class="text-sm text-gray-600"
          >
            entries
          </span>
        </div>
      </div>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="min-w-full divide-y divide-gray-200"
      >
        <thead
          class="bg-gray-50"
        >
          <tr>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Product Name
              </div>
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Price
              </div>
            </th>
            <th
              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
            >
              <div
                class="flex items-center gap-2"
              >
                Stock
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="bg-white divide-y divide-gray-200"
        >
          <tr
            class="hover:bg-gray-50 transition-colors"
          >
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              Product 1
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              $19.99
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              50
            </td>
          </tr>
          <tr
            class="hover:bg-gray-50 transition-colors"
          >
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              Product 2
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              $29.99
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              30
            </td>
          </tr>
          <tr
            class="hover:bg-gray-50 transition-colors"
          >
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              Product 3
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              $39.99
            </td>
            <td
              class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"
            >
              20
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="px-6 py-4 border-t border-gray-200 flex flex-col sm:flex-row justify-between items-center gap-4"
    >
      <p
        class="text-sm text-gray-600"
      >
        Showing 
        <span
          class="font-medium"
        >
          1
        </span>
         to
         
        <span
          class="font-medium"
        >
          3
        </span>
         of
         
        <span
          class="font-medium"
        >
          3
        </span>
         results
      </p>
    </div>
  </div>
</div>
`;
